...
        android:gravity="right"
        android:orientation="vertical"
        android:paddingBottom="30dp"
        android:paddingRight="90dp">

    <EditText
        android:id="@+id/loginInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="login ID"
        android:inputType="number"
        tools:layout_constraintTop_creator="1"
...
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="75dp" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:layout_marginLeft="16dp"
...
            android:gravity="right"
            android:orientation="vertical"
            android:paddingBottom="30dp"
            android:paddingRight="0dp">

        <Button
            android:id="@+id/loginButton"
            android:backgroundTint="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="Login"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:layout_constraintTop_creator="1"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordInput" />
        </LinearLayout>
...
