...
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginBottom="58dp"
        android:layout_marginTop="84dp"
        android:text="Enter problem set number you want to view"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/enterNumber"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enterNumber"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="176dp"
        android:layout_marginEnd="159dp"
        android:layout_marginStart="137dp"
        android:layout_marginTop="77dp"
        android:text="Enter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterNumber" />
</android.support.constraint.ConstraintLayout>

